docs/snippets/dr/yamls/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    meta.helm.sh/release-name: wordpress
    meta.helm.sh/release-namespace: wordpress
    stork.libopenstorage.org/skipresource: "true"
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
